# AMD_Robotics_Hackathon_2025_Sushi_Taisho

./: .gitignore  .gitmodules  :w  LICENSE  README.md  pyproject.toml
mission2/: README.md  __init__.py
mission2/code/: __init__.py
mission2/code/config/: inference_config.yaml  so101.yaml  training_config.yaml
mission2/code/scripts/: inference.py  train.py
mission2/code/src/: __init__.py  backbone.py  callbacks.py  cli.py  config.py  dataset.py  eval.py  fm.py  policy.py  utils.py
mission2/models/cfg/: ddim-dit-ptp.yaml  ddim-dit.yaml  ddim-dit:re.yaml  streaming-ad.yaml  streaming.yaml  streaming:re-norm.yaml  streaming:re.yaml  unet-l.yaml  unet.yaml
mission2/wandb/run-20251207_102603-b64s9so7/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
